# esphome-homewhiz

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
esphome/: bridge.yaml  secrets.yaml.example
esphome/components/homewhiz/: __init__.py  binary_sensor.py  decode.h  homewhiz.cpp  homewhiz.h  sensor.py  text_sensor.py
provisioning/: .env.example  README.md  conftest.py  fetch_config.py  generate_mapping.py  pyproject.toml
provisioning/tests/: test_fetch_config.py  test_generate_mapping.py
tests/: run.sh  test_decode.cpp
